# backend/openapi.yaml
@@ -8,7 +8,7 @@ servers:
 tags:
   - name: tours
   - name: logs
-  
+
 paths:
   /tours:
     post:
@@ -25,6 +25,10 @@ paths:
       responses:
         '201':
           description: Tour successfully created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/tour'
     get:
       summary: Returns all tours
       description: Returns a list of all tours and basic parameters
@@ -41,11 +45,26 @@ paths:
                   $ref: '#/components/schemas/tour'
         '204':
           description: No tours exist
-  
-  /tours/{tour_id}:
+
     put:
       summary: Modifies the specified tour
       description: Changes the tour associated with the give tour-id to match the new data
+      tags:
+        - tours
+      responses:
+        '200':
+          description: Tour modified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/tour'
+        '404':
+          description: Tour does not exist
+
+  /tours/{tour_id}:
+    get:
+      summary: Returns a specific tour
+      description: Returns a tours with its basic parameters
       tags:
         - tours
       parameters:
@@ -57,14 +76,14 @@ paths:
           required: true
       responses:
         '200':
-          description: Tour modified
+          description: Data retrieved
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/tour'
         '404':
           description: Tour does not exist
-      
+
     delete:
       summary: Deletes the specified tour
       description: Deletes the tour and all log entries associated with the given tour-id
@@ -82,7 +101,7 @@ paths:
           description: Tour deleted
         '404':
           description: Tour does not exist
-  
+
   /tours/{tour_id}/logs:
     get:
       summary: Returns all logs of specified tour
@@ -128,11 +147,27 @@ paths:
                 $ref: '#/components/schemas/tour_log'
         '404':
           description: Tour does not exist
-          
-  /logs/{log_id}:
+
+  /logs:
     put:
       summary: Modifies the specified log entry
       description: Changes the log entry associated with the give log-id to match the new data
+      tags:
+        - logs
+      responses:
+        '200':
+          description: Log entry modified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/tour_log'
+        '404':
+          description: Log entry does not exist
+
+  /logs/{log_id}:
+    get:
+      summary: Returns a specific log entry
+      description: Returns the log entry associated with the give log-id
       tags:
         - logs
       parameters:
@@ -144,14 +179,14 @@ paths:
           required: true
       responses:
         '200':
-          description: Log entry modified
+          description: Log entry retrieved
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/tour_log'
         '404':
           description: Log entry does not exist
-      
+
     delete:
       summary: Deletes the specified log entry
       description: Deletes the log entry associated with the given log-id
@@ -169,11 +204,11 @@ paths:
           description: Log entry deleted
         '404':
           description: Log entry does not exist
-          
-  /tours/{tour_id}/image:
+
+  /tours/{tour_id}/report:
     get:
-      summary: Returns a visual representation of a tour
-      description: "Returns an image visually describing the tour, generated by -TODO: openstreetmap or openrouteservice-"
+      summary: Returns a pdf report of a tour
+      description: Returns a report summarizing all paramters of a tour in pdf form
       tags:
         - tours
       parameters:
@@ -185,9 +220,9 @@ paths:
           required: true
       responses:
         '200':
-          description: Image retrieved creates
+          description: Pdf created
           content:
-            image/*:
+            application/pdf:
               schema:
                 type: string
                 format: binary
@@ -208,24 +243,26 @@ components:
         description:
           type: string
           nullable: true
-        start:
-          type: array
-          minItems: 2
-          maxItems: 2
-          items:
-            type: number
-            format: float
-          description: latitude and longitude in decimal degrees
-          example: [48.23928, 16.37732]
-        end:
-          type: array
-          minItems: 2
-          maxItems: 2
-          items:
-            type: number
-            format: float
-          description: latitude and longitude in decimal degrees
-          example: [48.23928, 16.37732]
+        start_lat:
+          type: number
+          format: float
+          description: latitude in decimal degrees
+          example: 48.23928
+        start_long:
+          type: number
+          format: float
+          description: longitude in decimal degrees
+          example: 16.37732
+        end_lat:
+          type: number
+          format: float
+          description: latitude in decimal degrees
+          example: 48.23928
+        end_long:
+          type: number
+          format: float
+          description: longitude in decimal degrees
+          example: 16.37732
         type:
           type: string
           enum: [walk, bike, pogo-stick]
