# backend/src/main/java/at/fhtw/tourplanner/services/TourController.java
@@ -2,7 +2,6 @@ package at.fhtw.tourplanner.services;
 
 import at.fhtw.tourplanner.models.Tour;
 import at.fhtw.tourplanner.models.TourLog;
-import at.fhtw.tourplanner.repositories.TourLogRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -55,5 +54,10 @@ public class TourController {
     @PostMapping("/{tour_id}/logs/")
     public ResponseEntity<TourLog> createTourLog(@PathVariable UUID tour_id, @RequestBody TourLog tourLog) {
         return ResponseEntity.created(URI.create("yes")).body(tourLogService.create(tourLog, tour_id)); // TODO: fix URI
+    }
+
+    @GetMapping("/{tour_id}/report")
+    public ResponseEntity<byte[]> getReport(@PathVariable UUID tour_id) {
+        return ResponseEntity.ok(tourService.generateReport(tour_id));
     }
 }
